force-app/main/default/objects/Phone_Call__c/Phone_Call__c.object-meta.xml
<CustomObject>
    <label>Phone Call</label>
    <nameField>
        <label>Phone Call Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Phone Call</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>