force-app/main/default/objects/Phone_Call__c/fields/Account__c.field-meta.xml
<CustomField>
    <fullName>Account__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Account</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Phone Call</relationshipLabel>
    <relationshipName>Phone_Call</relationshipName>
    <type>Lookup</type>
</CustomField>