force-app/main/default/objects/Phone_Call__c/fields/Lead__c.field-meta.xml
<CustomField>
    <fullName>Lead__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Lead</label>
    <referenceTo>Lead</referenceTo>
    <relationshipLabel>Phone Call</relationshipLabel>
    <relationshipName>Phone_Call</relationshipName>
    <type>Lookup</type>
</CustomField>