force-app/main/default/objects/Phone_Call__c/listViews/Phone_Call_Phone_Call.listView-meta.xml
<ListView>
    <fullName>Phone_Call_Phone_Call</fullName>
    <filterScope>Queue</filterScope>
    <label>Phone Call</label>
    <queue>Phone_Call</queue>
    <sharedTo>
        <allInternalUsers />
    </sharedTo>
</ListView>